--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-logging.level.ru.yandex.practicum=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
 
@@ -21,5 +20,4 @@ spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=test
 spring.datasource.password=test
 
-spring.h2.console.enabled=true
-hibernate.show_sql=true
+spring.jackson.serialization.fail-on-empty-beans=false
