--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/share_it
 spring.datasource.username=root
 spring.datasource.password=root
 #---
-#spring.config.activate.on-profile=ci,test
+spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:share_it
 spring.datasource.username=test
